--- a/shop-portal/pom.xml
+++ b/shop-portal/pom.xml
@@ -15,5 +15,12 @@
         <module>portal-web</module>
     </modules>
 
+    <dependencies>
+        <!-- springcloud feign组件 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
