--- a/shop-api-impl/member-impl/src/main/resources/application.properties
+++ b/shop-api-impl/member-impl/src/main/resources/application.properties
@@ -17,3 +17,33 @@ swagger.terms-of-service-url=www.mayikt.com
 swagger.contact.name=\u725B\u519B\u4F1F
 swagger.contact.email=940213222@qq.com
 swagger.contact.url=www.qianniuxing.net
+
+#mysql\u6570\u636E\u5E93\u8FDE\u63A5\u4FE1\u606F
+spring.datasource.username=root
+spring.datasource.password=13222
+spring.datasource.url=jdbc:mysql://localhost:3306/meite-shop?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#druid\u6570\u636E\u6E90
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.filters=stat
+spring.datasource.maxActive=5
+spring.datasource.initialSize=1
+spring.datasource.maxWait=60000
+spring.datasource.minIdle=1
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=select 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxOpenPreparedStatements=5
+#mybatis\u7684mapper\u6587\u4EF6\u4FE1\u606F
+mybatis.mapper-locations=classpath:mapper/**/*.xml
+#\u663E\u793Amybatis\u6253\u5370\u51FA\u7684sql\u65E5\u5FD7\u4FE1\u606F
+logging.level.com.hello.mapper=DEBUG
+
+##redis\u8FDE\u63A5\u4FE1\u606F
+spring.redis.host=192.168.1.193
+spring.redis.port=6379
+spring.redis.password=13222
