--- a/shop-basic/xxl-sso-server/src/main/resources/application.properties
+++ b/shop-basic/xxl-sso-server/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.freemarker.settings.number_format=0.##########
 xxl.sso.redis.address=redis://127.0.0.1:6379
 xxl.sso.redis.expire.minite=1440
 
+#\u8BF7\u6C42\u5904\u7406\u7684\u8D85\u65F6\u65F6\u95F4
+ribbon.ReadTimeout=120000
+#\u8BF7\u6C42\u8FDE\u63A5\u7684\u8D85\u65F6\u65F6\u95F4
+ribbon.ConnectTimeout=30000
+
