--- a/shop-portal/portal-web/src/main/resources/application.properties
+++ b/shop-portal/portal-web/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=portal-web
 
 #tomcat\u7AEF\u53E3\u53F7
-server.port=8091
+server.port=80
 
 #springMVC\u524D\u7AEF\u89C6\u56FE\u524D\u7F00\u4E0E\u540E\u7F00
 spring.mvc.view.prefix=/WEB-INF/view/
@@ -16,5 +16,21 @@ spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 
+### freemarker
+spring.freemarker.request-context-attribute=request
+spring.freemarker.cache=false
 
+### resource (default: /**  + classpath:/static/ )
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
+spring.freemarker.settings.number_format=0.##########
 
+##redis\u8FDE\u63A5\u4FE1\u606F
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+
+### xxl-sso
+xxl.sso.server=http://xxlssoserver.com:8080/xxl-sso-server
+xxl.sso.logout.path=/logout
+xxl-sso.excluded.paths=
+xxl.sso.redis.address=redis://127.0.0.1:6379
