--- a/shop-api-impl/member-impl/src/main/resources/application.properties
+++ b/shop-api-impl/member-impl/src/main/resources/application.properties
@@ -44,6 +44,9 @@ mybatis.mapper-locations=classpath:mapper/**/*.xml
 logging.level.com.hello.mapper=DEBUG
 
 ##redis\u8FDE\u63A5\u4FE1\u606F
-spring.redis.host=192.168.1.193
+#spring.redis.host=192.168.1.193
+#spring.redis.port=6379
+#spring.redis.password=13222
+
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.redis.password=13222
