--- a/shop-portal/pay-web/src/main/resources/application.properties
+++ b/shop-portal/pay-web/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #\u7AEF\u53E3\u53F7
-spring.application.name=portal-web
+spring.application.name=pay-web
 
 #tomcat\u7AEF\u53E3\u53F7
-server.port=80
+server.port=8085
 
 #springMVC\u524D\u7AEF\u89C6\u56FE\u524D\u7F00\u4E0E\u540E\u7F00
 spring.mvc.view.prefix=/WEB-INF/view/
@@ -21,9 +21,8 @@ spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 spring.freemarker.settings.number_format=0.##########
 
-
 ### xxl-sso
 xxl.sso.server=http://127.0.0.1:8080/xxl-sso-server
 xxl.sso.logout.path=/logout
-xxl-sso.excluded.paths=/layui/**
+xxl-sso.excluded.paths=
 xxl.sso.redis.address=redis://127.0.0.1:6379
