--- a/shop-api-impl/pay-impl/src/main/resources/application.properties
+++ b/shop-api-impl/pay-impl/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #\u7AEF\u53E3\u53F7
-server.port=8300
+server.port=8400
 #\u540D\u79F0
-spring.application.name=api-member
+spring.application.name=api-pay
 
 #server.servlet.context-path=/v1/
 
@@ -52,13 +52,13 @@ logging.level.com.hello.mapper=DEBUG
 #spring.redis.jedis.pool.max-active=1000
 #spring.redis.jedis.pool.max-wait=-1
 #redis\u672C\u5730\u8FDE\u63A5
-#spring.redis.host=127.0.0.1
-#spring.redis.port=6379
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
 
 #elasticsearch\u641C\u7D22
-spring.data.elasticsearch.cluster-name=myes
-spring.data.elasticsearch.cluster-nodes=192.168.1.192:9300
+#spring.data.elasticsearch.cluster-name=myes
+#spring.data.elasticsearch.cluster-nodes=192.168.1.192:9300
 
 #kafka\u914D\u7F6E\u4FE1\u606F
-spring.kafka.bootstrap-servers=192.168.1.192:9092
+#spring.kafka.bootstrap-servers=192.168.1.192:9092
 
