--- a/shop-api/pom.xml
+++ b/shop-api/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>weChat</module>
         <module>member</module>
+        <module>pay</module>
     </modules>
 
     <dependencies>
