--- a/shop-basic/pom.xml
+++ b/shop-basic/pom.xml
@@ -16,6 +16,7 @@
         <module>eureka</module>
         <module>zuul</module>
         <module>xxl-sso-server</module>
+        <module>elk-kafka</module>
     </modules>
 
 
