--- a/shop-api-impl/pay-impl/src/main/resources/application.properties
+++ b/shop-api-impl/pay-impl/src/main/resources/application.properties
@@ -1,64 +1,1 @@
-#\u7AEF\u53E3\u53F7
-server.port=8400
-#\u540D\u79F0
-spring.application.name=api-pay
-
-#server.servlet.context-path=/v1/
-
-#\u6CE8\u518C\u5230eureka
-eureka.client.service-url.defaultZone=http://127.0.0.1:8100/eureka/
-
-#swagger\u76F8\u5173\u914D\u7F6E
-swagger.base-package=com.hello.api.member
-swagger.title=SpringCloud2.x\u6784\u5EFA\u5FAE####swagger\u76F8\u5173\u914D\u7F6E
-swagger.description=\u8BE5\u9879\u76EE\u201C\u57FA\u4E8ESpringCloud2.x\u6784\u5EFA\u5FAE\u670D\u52A1\u7535\u5546\u9879\u76EE\u201D\u7531\u6BCF\u7279\u6559\u80B2|\u8682\u8681\u8BFE\u5802\u7248\u6743\u6240\u6709\uFF0C\u672A\u7ECF\u8FC7\u5141\u8BB8\u7684\u60C5\u51B5\u4E0B\uFF0C\u79C1\u81EA\u5206\u4EAB\u89C6\u9891\u548C\u6E90\u7801\u5C5E\u4E8E\u8FDD\u6CD5\u884C\u4E3A\u3002
-swagger.version=1.0
-swagger.terms-of-service-url=www.mayikt.com
-swagger.contact.name=\u725B\u519B\u4F1F
-swagger.contact.email=940213222@qq.com
-swagger.contact.url=www.qianniuxing.net
-
-#mysql\u6570\u636E\u5E93\u8FDE\u63A5\u4FE1\u606F
-spring.datasource.url=jdbc:mysql://192.168.1.192:3306/meite-shop?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=13222
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#druid\u6570\u636E\u6E90
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.filters=stat
-spring.datasource.maxActive=5
-spring.datasource.initialSize=1
-spring.datasource.maxWait=60000
-spring.datasource.minIdle=1
-spring.datasource.timeBetweenEvictionRunsMillis=60000
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=select 'x'
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn=false
-spring.datasource.poolPreparedStatements=true
-spring.datasource.maxOpenPreparedStatements=5
-#mybatis\u7684mapper\u6587\u4EF6\u4FE1\u606F
-mybatis.mapper-locations=classpath:mapper/**/*.xml
-#\u663E\u793Amybatis\u6253\u5370\u51FA\u7684sql\u65E5\u5FD7\u4FE1\u606F
-logging.level.com.hello.mapper=DEBUG
-
-##redis\u8FDE\u63A5\u4FE1\u606F
-#spring.redis.host=192.168.1.193
-#spring.redis.port=6379
-#spring.redis.password=13222
-#spring.redis.jedis.pool.max-idle=100
-#spring.redis.jedis.pool.min-idle=1
-#spring.redis.jedis.pool.max-active=1000
-#spring.redis.jedis.pool.max-wait=-1
-#redis\u672C\u5730\u8FDE\u63A5
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-
-#elasticsearch\u641C\u7D22
-#spring.data.elasticsearch.cluster-name=myes
-#spring.data.elasticsearch.cluster-nodes=192.168.1.192:9300
-
-#kafka\u914D\u7F6E\u4FE1\u606F
-#spring.kafka.bootstrap-servers=192.168.1.192:9092
-
+spring.profiles.active=dev
