--- a/shop-common/unionPay/pom.xml
+++ b/shop-common/unionPay/pom.xml
@@ -3,22 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>shop-portal</artifactId>
+        <artifactId>shop-common</artifactId>
         <groupId>com.meite</groupId>
         <version>1.0-RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>pay-web</artifactId>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.meite</groupId>
-            <artifactId>pay</artifactId>
-            <version>1.0-RELEASE</version>
-        </dependency>
-
-    </dependencies>
+    <artifactId>unionPay</artifactId>
 
 
 </project>
